BUG#21675 - engine=archive 2GB file limit, when reached mysqld restarts on any query

If mysqld is linked against system installed zlib (which is likely compiled w/o
LFS) and archive table exceedes 2G, mysqld will likely be terminated with SIGXFSZ.

Prior to actual write perform a check if there is space in data file. This fixes
abnormal process termination with SIGXFSZ.

No test case for this bugfix.